# django-ai-kit-auth

./: .ci.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .gitlab_ci.yml  LICENSE  README.md  renovate.json
.github/workflows/: test_matrix.yml
.gitlab/: dependabot.yml
ai-kit-auth/: .eslintrc  README.md  package-lock.json  package.json  tsconfig.eslint.json
ai-kit-auth/src/: index.ts
ai-kit-auth/src/api/: types.ts
ai-kit-auth/src/components/: Login.tsx
ai-kit-auth/src/store/: types.ts
cypress/: cypress.json  package-lock.json  package.json
cypress/cypress/support/: index.js
demo/: README.md  docker-compose.yml  setup_demo_project.sh
demo/backend/: Dockerfile  Pipfile  docker-compose.env  run_backend.sh  run_backend_local.sh
demo/backend/demo/: models.py  serializers.py  settings.py  urls.py  views.py
demo/frontend/: Dockerfile  package-lock.json  package.json  run.sh  run_local.sh
demo/frontend/src/: App.tsx  ConfiguredAuth.tsx  Dashboard.tsx  configuredAuth.ts
django-ai-kit-auth/: MANIFEST.in  Pipfile  README.md  commit_parser.py  runtests.py  setup.cfg  setup.py
django-ai-kit-auth/account/: tests.py  urls.py  views.py
django-ai-kit-auth/account/tests/: settings.py  tests.py
django-ai-kit-auth/ai-kit-auth/: urls.py
django-ai-kit-auth/ai-kit-auth/tests/: test_api.py  test_utils.py
django-ai-kit-auth/ai_kit_auth/: serializers.py  urls.py
django-ai-kit-auth/ai_kit_auth/tests/: settings.py  tests.py
django-ai-kit-auth/auth/: apps.py  serializers.py  urls.py  views.py
django-ai-kit-auth/auth/tests/: settings.py  tests.py
django-app/: MANIFEST.in  Pipfile  README.rst  pyproject.toml  runtests.py  setup.cfg  setup.py
django-app/ai_kit_auth/: admin.py  apps.py  serializers.py  services.py  settings.py  signals.py  urls.py  utils.py  views.py
django-app/ai_kit_auth/templates/ai_kit_auth/: body_base.html  reset_password_body.html  reset_password_body.txt  reset_password_title.txt  set_password_body.html  set_password_body.txt  set_password_title.txt  user_created_body.html  user_created_body.txt
django-app/ai_kit_auth/tests/: serializers.py  settings.py  test_admin.py  test_api.py  test_services.py  test_settings.py  test_utils.py
django-app/templates/: user_created_body.html  user_created_body.txt  user_created_title.txt
django-app/templates/ai_kit_auth/: user_created_body.txt
examples/email-user/: README.md  docker-compose.yml
examples/email-user/backend/: Dockerfile  Pipfile
examples/email-user/frontend/: Dockerfile  README.md  package-lock.json  package.json  run_local.sh
examples/nextjs/: README.md  docker-compose.yml  setup_demo_project.sh
examples/nextjs/backend/: Dockerfile  Pipfile  docker-compose.env  run_backend.sh
examples/nextjs/frontend/: .eslintrc  Dockerfile  package-lock.json  package.json  run_local.sh
examples/react-router/: README.md  docker-compose.yml  setup_demo_project.sh
examples/react-router/backend/: Dockerfile  Pipfile
examples/react-router/frontend/: .stylelintrc  (+4 more)
frontend/: .eslintrc  package-lock.json  package.json  tsconfig.json
python_commit_parser/: setup.cfg  setup.py
python_commit_parser/commit_parser/: __init__.py
react-lib/: .eslintrc  README.md  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.esm.json  tsconfig.json
react-lib/.husky/: commit-msg
react-lib/src/: Configuration.tsx  index.ts  util.ts
(+94 files in other folders)
