[metadata]
name = django_ai_kit_auth
description = A Django package for account and authentication managment
long_description = file: README.md
url = https://gitlab.ambient-innovation.com/ai/ai.kit/authentication
author = Ambient Innovation
author_email = hello@ambient-innovation.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

[semantic_release]
version_variable = account/__init__.py:__version__
commit_parser = django-ai-kit-commit-parser.commit_parser.django_parser
hvcs=gitlab
