[metadata]
name = commit_parser
url = https://gitlab.ambient-innovation.com/ai/ai.kit/authentication/python_commit_parser
author = Ambient Innovation
author_email = hello@ambient-innovation.com
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    commit_parser
